--- a/part 4/mars.config
+++ b/part 4/mars.config
@@ -1,5 +1,5 @@
 {{10,10},
- [{mars, {2,1}, {9,7}}],
+ [{earth, {2,1}, {9,7}}],
  [{palm, [{1,1}, {1,10}, {10,1}, {10,10}]},
   {rock, [{4,8}, {5,8}, {6,8}, {7,8}, {7,7}]},
   {water,[{6,6}, {6,7}, {7,6}, {7,7}]}]}.
